wallpapers/potd: Give random chooser a seed in flickrprovider

Make the seed depend on the current date.

BUG: 453391